--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,5 @@
-POSTGRES_HOST=POSTGRES_HOST
-POSTGRES_NAME=POSTGRES_NAME
-POSTGRES_USER=POSTGRES_USER
-POSTGRES_PASSWORD=POSTGRES_PASSWORD
+POSTGRES_HOST=db
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=postgres
+POSTGRES_NAME=postgres
