--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 POSTGRES_HOST=db
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_DB=postgres
 POSTGRES_NAME=postgres
+SECRET_KEY=djangosecretkey
